[package]
name = "nice_bevy_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

bevy_pkv = {  optional = true, git = "https://github.com/johanhelsing/bevy_pkv"}
serde = { version = "1", default-features = false }


[dependencies.bevy]
version = "0.13"
# Disable the default features if there are any that you do not want
default-features = false
features = []


[features]
bevy_pkv =["dep:bevy_pkv"]

bevy_ui = ["bevy/bevy_ui"]