[package]
name = "nice_bevy_utils"
version = "0.14.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy_pkv = {version = "0.11.0", optional = true}
serde = { version = "1", default-features = false }
glam = {version = "0.27"}
nice-bevy-utils-macro = { path = "./macro", version = "=0.1.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-compat = "0.2.4"

[dependencies.bevy]
version = "0.14"
# Disable the default features if there are any that you do not want
default-features = false
features = []


[features]
bevy_pkv =["dep:bevy_pkv"]
bevy_ui = ["bevy/bevy_ui"]
derive = ["nice-bevy-utils-macro"]