[package]
name = "nice-bevy-utils-macro"
description = "Proc macro for `nice_bevy_utils`. Do not use directly."
readme = "../README.md"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["proc-macro", "parsing", "printing", "full", "derive"], default-features = false }
quote = "1"